maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: value BiscuitY is not a member of Int
  BiscuitX BiscuitY = DetectBiscuit()
           ^